@@ -48,7 +48,7 @@ pub(crate) struct UserConfig {
     pub(crate) http_rsp_hdr_recv_timeout: Option<Duration>,
     pub(crate) request_alive_max: usize,
     pub(crate) request_rate_limit: Option<RateLimitQuotaConfig>,
-    pub(crate) tcp_conn_rate_limit: Option<RateLimitQuotaConfig>,
+    pub(crate) connection_rate_limit: Option<RateLimitQuotaConfig>,
     pub(crate) tcp_sock_speed_limit: TcpSockSpeedLimitConfig,
     pub(crate) udp_sock_speed_limit: UdpSockSpeedLimitConfig,
     pub(crate) tcp_all_upload_speed_limit: Option<GlobalStreamSpeedLimitConfig>,
@@ -88,7 +88,7 @@ impl Default for UserConfig {
             http_rsp_hdr_recv_timeout: None,
             request_alive_max: 0,
             request_rate_limit: None,
-            tcp_conn_rate_limit: None,
+            connection_rate_limit: None,
             tcp_sock_speed_limit: Default::default(),
             udp_sock_speed_limit: Default::default(),
             tcp_all_upload_speed_limit: None,
